# crossbar

./: ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CODEX.md
.github/workflows/: ci.yml
benches/: transport.rs
bindings/cpp/: CMakeLists.txt
bindings/cpp/examples/: publisher.cpp  subscriber.cpp
bindings/cpp/include/crossbar/: crossbar.hpp
bindings/go/: go.mod
bindings/go/crossbar/: config.go  crossbar.go  crossbar.h
bindings/go/examples/publisher/: main.go
bindings/go/examples/subscriber/: main.go
bindings/python/: pyproject.toml
bindings/python/crossbar/: __init__.py  _ffi.py  pubsub.py
bindings/python/examples/: publisher.py  subscriber.py
crossbar-ffi/: Cargo.toml
crossbar-ffi/include/: crossbar.h
crossbar-ffi/src/: lib.rs
crossbar-macros/: Cargo.toml
crossbar-macros/src/: lib.rs
examples/: client.rs  demo.rs  pubsub_publisher.rs  pubsub_subscriber.rs  server.rs
scripts/: gen_benchmark_chart.py
src/: error.rs  handler.rs  lib.rs  router.rs  transport.rs  types.rs
src/transport/: channel.rs  inproc.rs  memory.rs  mod.rs  tcp.rs  uds.rs
src/transport/shm/: bidi.rs  mmap.rs  mod.rs  notify.rs  pool_pubsub.rs  pubsub.rs  pubsub_rpc.rs  region.rs
tests/: handler.rs  macros.rs  routing.rs  stress.rs  transport.rs  types.rs
