[workspace]
members = [".", "crossbar-macros"]

[package]
name = "crossbar"
version = "0.1.0"
edition = "2021"
description = "Transport-polymorphic URI router. Define once, serve over memory or shared memory."
license = "MIT OR Apache-2.0"

[features]
default = []
shm = ["memmap2", "libc"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbar-macros = { path = "crossbar-macros" }
memmap2 = { version = "0.9", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "demo"

[[example]]
name = "pubsub_publisher"
required-features = ["shm"]

[[example]]
name = "pubsub_subscriber"
required-features = ["shm"]

[[bench]]
name = "transport"
harness = false
