[workspace]
members = [".", "crossbar-macros"]

[package]
name = "crossbar"
version = "0.1.0"
edition = "2021"
description = "Transport-polymorphic URI router. Define once, serve over memory or shared memory."
license = "MIT OR Apache-2.0"
keywords = ["router", "ipc", "shared-memory", "transport", "rpc"]
categories = ["network-programming", "asynchronous"]

[features]
default = []
shm = ["libc"]

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
crossbar-macros = { path = "crossbar-macros" }
libc = { version = "0.2.183", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
iceoryx2 = "0.8.1"

[[example]]
name = "demo"

[[example]]
name = "pubsub_publisher"
required-features = ["shm"]

[[example]]
name = "pubsub_subscriber"
required-features = ["shm"]

[[bench]]
name = "transport"
harness = false
