[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crossbar"
version = "0.1.0"
description = "Python SDK for the crossbar zero-copy IPC library"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
keywords = ["ipc", "shared-memory", "pubsub", "zero-copy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/theta-gamma/viaduct"

[tool.setuptools.packages.find]
include = ["crossbar*"]
